--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -4,7 +4,7 @@ $red: #df3333;
 $primary: #5ece7b;
 $text: #1d1f22;
 $black: rgb(17, 17, 17);
-$white: #fff;
+$white: rgb(255, 255, 255);
 
 $gray1: rgba(128, 128, 128, 0.5);
 // sizes
